# waves_summerschool

./: README.md
FastRobustSolversHelmholtz/: README.md
Photos/: IMG_4860.HEIC  IMG_4862.HEIC  IMG_4863.HEIC  IMG_4866.HEIC  IMG_4867.HEIC  IMG_4870.HEIC  IMG_4871.HEIC  IMG_4872.HEIC  IMG_4873.HEIC  IMG_4874.HEIC  IMG_4875.HEIC  IMG_4876.HEIC  IMG_4877.HEIC  IMG_4878.HEIC  IMG_4880.HEIC  IMG_4881.HEIC  IMG_4883.HEIC  IMG_4885.HEIC  IMG_4886.HEIC  IMG_4887.HEIC  IMG_4888.HEIC  IMG_4889.HEIC  IMG_4890.HEIC  IMG_4891.HEIC
Photos/SocialEvent/: IMG_4893.HEIC  IMG_4894.HEIC  IMG_4895.HEIC  IMG_4896.HEIC  IMG_4897.HEIC  IMG_4899.HEIC  IMG_4900.HEIC  IMG_4901.HEIC  IMG_4904.HEIC
intro_fem/code/: Extra_Helmholtz_PML.ipynb  Helmholtz_Dirichlet.ipynb  Helmholtz_Dirichlet_L2.ipynb  Helmholtz_Dirichlet_L3.ipynb  README.md  pyproject.toml  requirements.txt
intro_fem/code/scripts/: run_dirichlet.py
intro_fem/code/src/easyFEMpkg/: assemble.py  geometry.py  main.py  mesh.py  plotting.py  pml.py
intro_fem/code/src/easyFEMpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
