[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyFEMpkg"
version = "0.1.0"
description = "Beginner-friendly Python rewrite of MATLAB FEM Basis project used in TU Delft for AP3001-FE"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
